--- a/mobile/ios/src/pages/home/home.html
+++ b/mobile/ios/src/pages/home/home.html
@@ -10,6 +10,9 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  This is the home page
+<ion-content padding align="middle" margin-top="100px">
+  <div top-margin="100px">
+      <img align="middle" src="./../assets/rewards.png"  />
+  </div>
+
 </ion-content>
