--- a/mobile/ios/src/pages/nomination_creation_screen/nomination_creation_screen.page.html
+++ b/mobile/ios/src/pages/nomination_creation_screen/nomination_creation_screen.page.html
@@ -195,7 +195,7 @@ Leader_Rewiers
           </ion-select>
 </ion-item>
 
-<button ion-button full (click)="createNomination()">
+<button ion-button full (click)="createNomination()" color="menu-left" >
 Save</button>
 
 </ion-content>
