--- a/mobile/ios/src/pages/nomination_creation_screen/nomination_creation_screen.page.html
+++ b/mobile/ios/src/pages/nomination_creation_screen/nomination_creation_screen.page.html
@@ -22,7 +22,7 @@ Nominator
 
 <ion-item>
 <label>
-Nominator_Ios
+Nominator
 </label>
 </ion-item>
 
@@ -32,7 +32,7 @@ Nominator_Ios
 
 <ion-item>
 <label>
-Team_Name
+Team Name
 </label>
 </ion-item>
 
@@ -42,7 +42,7 @@ Team_Name
 
 <ion-item>
 <label>
-Project_Name
+Project Name
 </label>
 </ion-item>
 
@@ -52,7 +52,7 @@ Project_Name
 
 <ion-item>
 <label>
-Is_Team
+IsTeam
 </label>
 </ion-item>
 
@@ -62,7 +62,7 @@ Is_Team
 
 <ion-item>
 <label>
-Is_Individual
+IsIndividual
 </label>
 </ion-item>
 
@@ -72,7 +72,7 @@ Is_Individual
 
 <ion-item>
 <label>
-Team_Desc
+Team Desc
 </label>
 </ion-item>
 
@@ -82,7 +82,7 @@ Team_Desc
 
 <ion-item>
 <label>
-Team_Notes
+Team Notes
 </label>
 </ion-item>
 
@@ -92,7 +92,7 @@ Team_Notes
 
 <ion-item>
 <label>
-Prime_Adjst
+Prime Adjst
 </label>
 </ion-item>
 
@@ -102,7 +102,7 @@ Prime_Adjst
 
 <ion-item>
 <label>
-Sec_Adjst
+Sec Adjst
 </label>
 </ion-item>
 
@@ -112,7 +112,7 @@ Sec_Adjst
 
 <ion-item>
 <label>
-Award_Total
+Award Total
 </label>
 </ion-item>
 
@@ -122,7 +122,7 @@ Award_Total
 
 <ion-item>
 <label>
-Award_Category
+Award Category
 </label>
 </ion-item>
 
@@ -142,7 +142,7 @@ Behaviors
 
 <ion-item>
 <label>
-IS_Current_Aduit_Client
+ISCurrentAduitClient
 </label>
 </ion-item>
 
@@ -152,7 +152,7 @@ IS_Current_Aduit_Client
 
 <ion-item>
 <label>
-One_Firm_Metrics
+One Firm Metrics
 </label>
 </ion-item>
 
@@ -185,7 +185,7 @@ Nominees
 
 <ion-item>
 <label>
-Leader_Rewiers
+Leader Rewiers
 </label>
 </ion-item> 
 
