--- a/mobile/ios/src/pages/home/home.html
+++ b/mobile/ios/src/pages/home/home.html
@@ -12,7 +12,7 @@
 
 <ion-content padding align="middle" margin-top="100px">
   <div top-margin="100px">
-      <img align="middle" src="./../assets/rewards.png"  />
+      <img align="middle" src="./assets/rewards.png"  />
   </div>
 
 </ion-content>
